--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /SpaghettiWars/bin/
 /SpaghettiWars/.classpath
 /SpaghettiWars/.project
+/SpaghettiWars/.idea/
+/SpaghettiWars/epicFoodWarGameProject.iml
